--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,6 +1,11 @@
-planet.erida.name = Erida
+planet.erida-erida.name = Erida
 
-item.rubidium.name = Rubidium
-item.leticen.name = Leticen
+item.erida-rubidium.name = Rubidium
+item.erida-leticen.name = Leticen
 
-block.rubidium-wall.name = Rubidium wall
+block.erida-rubidium-wall.name = Rubidium wall
+block.erida-rubidium-duct.name = Rubidium duct
+block.erida-sand-filter.name = Sand filter
+block.erida-simple-core.name = Simple core
+
+unit.erida-particle.name = Particle
