--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,4 +1,4 @@
-planet.erida-erida.name = Erida
+planet.erida.name = Erida
 
 item.erida-rubidium.name = Rubidium
 item.erida-leticen.name = Leticen
@@ -6,6 +6,7 @@ item.erida-leticen.name = Leticen
 block.erida-rubidium-wall.name = Rubidium wall
 block.erida-rubidium-duct.name = Rubidium duct
 block.erida-sand-filter.name = Sand filter
+block.erida-rubidium-cliff-crusher.name = Cliff crusher
 block.erida-simple-core.name = Simple core
 
 unit.erida-particle.name = Particle
