--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -10,3 +10,5 @@ block.erida-rubidium-cliff-crusher.name = Cliff crusher
 block.erida-simple-core.name = Simple core
 
 unit.erida-particle.name = Particle
+
+sector.debris.name = Debris
