--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -12,3 +12,5 @@ block.erida-simple-core.name = Simple core
 unit.erida-particle.name = Particle
 
 sector.debris.name = Debris
+
+mod.erida.description = In developement...
