--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -14,3 +14,4 @@ block.erida-simple-core.name = Simple core
 unit.erida-particle.name = Particle
 
 sector.debris.name = Debris
+sector.quarry.name = Quarry
