--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -10,6 +10,10 @@ block.erida-rubidium-duct.name = Rubidium duct
 block.erida-sand-filter.name = Sand filter
 block.erida-rubidium-cliff-crusher.name = Cliff crusher
 block.erida-simple-core.name = Simple core
+block.erida-furnace.name = Furnace
+block.erida-leticen-smelter.name = Leticen smelter
+block.erida-rubidium-conduit.name = Rubidium conduit
+block.erida-rubidium-pump.name = Rubidium pump
 
 unit.erida-particle.name = Particle
 
