--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -14,6 +14,9 @@ block.erida-furnace.name = Furnace
 block.erida-leticen-smelter.name = Leticen smelter
 block.erida-rubidium-conduit.name = Rubidium conduit
 block.erida-rubidium-pump.name = Rubidium pump
+block.erida-heat-quarry.name = Heat quarry
+block.erida-leticen-juction.name = Leticen juction
+block.erida-leticen-router.name = Leticen router
 
 unit.erida-particle.name = Particle
 
