--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -4,6 +4,7 @@ techtree.erida.name = Erida
 
 item.erida-rubidium.name = Rubidium
 item.erida-leticen.name = Leticen
+item.erisa-loelo.name = Loelo
 
 block.erida-rubidium-wall.name = Rubidium wall
 block.erida-rubidium-duct.name = Rubidium duct
@@ -17,6 +18,13 @@ block.erida-rubidium-pump.name = Rubidium pump
 block.erida-heat-quarry.name = Heat quarry
 block.erida-leticen-juction.name = Leticen juction
 block.erida-leticen-router.name = Leticen router
+block.erida-advanced-sand-filter.name = Advanced sand filter
+block.erida-sand-extractor.name = Sand extractor
+block.erida-energy-node.name = Energy node
+block.erida-energy-battery.name = Energy battery
+block.erida-energy-generator.name = Energy generator
+block.erida-mini-mass-driver.name = Mini mass driver
+block.erida-leticen-bridge.name = Leticen bridge
 
 unit.erida-particle.name = Particle
 
