--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -4,7 +4,7 @@ techtree.erida.name = Erida
 
 item.erida-rubidium.name = Rubidium
 item.erida-leticen.name = Leticen
-item.erisa-loelo.name = Loelo
+item.erida-loelo.name = Loelo
 
 block.erida-rubidium-wall.name = Rubidium wall
 block.erida-rubidium-duct.name = Rubidium duct
