--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -5,6 +5,8 @@ techtree.erida.name = Erida
 item.erida-rubidium.name = Rubidium
 item.erida-leticen.name = Leticen
 item.erida-loelo.name = Loelo
+item.erida-plastic.name = Plastic
+item.erida-foringor.name = Foringor
 
 block.erida-rubidium-wall.name = Rubidium wall
 block.erida-rubidium-duct.name = Rubidium duct
@@ -26,7 +28,38 @@ block.erida-energy-generator.name = Energy generator
 block.erida-mini-mass-driver.name = Mini mass driver
 block.erida-leticen-bridge.name = Leticen bridge
 
+block.erida-advanced-core.namme = Advanced core
+block.erida-advanced-pump.name = Addvanced pump
+block.erida-defender.name = Defender
+block.erida-destroyer.name = Destroyer
+block.erida-display.name = Display
+block.erida-durable-message.name = Durable message
+block.erida-durable-switch.name = Durable switch
+block.erida-flying-factory-point.name = Flying factory point
+block.erida-foringor-smelter.name = Foringor smelter
+block.erida-foringor-wall-large.name = Large foringor wall
+block.erida-foringor-wall.name = Foringor wall
+block.erida-large-cliff-crusher.name = Large cliff crusher
+block.erida-large-solar-energy-generator.name = Large solar panel
+block.erida-leticen-wall-large.name = Large leticen wall
+block.erida-leticen-wall.name = Leticen wall
+block.erida-loelo-wall-large.name = Large loelo wall
+block.erida-loelo-wall.name = Loelo wall
+block.erida-mech-factory-point.name = Mech factory point
+block.erida-mini-memory-storage.name = Mini memory storage
+block.erida-oil-mining-station.name = Oil mining station
+block.erida-plastic-factory.name = Plastic factory
+block.erida-rage.name = Rage
+block.erida-rubidium-wall-large.name = Large rubidium wall
+block.erida-solar-energy-generator.name = Solar panel
+block.erida-tornado.name = Tornado
+block.erida-weak-processor.name = Weak processor
+
 unit.erida-particle.name = Particle
+unit.erida-quantum.name = Quantum
+unit.erida-spark.name = Spark
+unit.erida-sunrise.name = Sunrise
 
 sector.debris.name = Debris
 sector.quarry.name = Quarry
+sector.LoeloMines.name = Loelo mines
