--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -29,7 +29,7 @@ block.erida-mini-mass-driver.name = Mini mass driver
 block.erida-leticen-bridge.name = Leticen bridge
 
 block.erida-advanced-core.namme = Advanced core
-block.erida-advanced-pump.name = Addvanced pump
+block.erida-advanced-pump.name = Advanced pump
 block.erida-defender.name = Defender
 block.erida-destroyer.name = Destroyer
 block.erida-display.name = Display
