--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -54,6 +54,10 @@ block.erida-rubidium-wall-large.name = Large rubidium wall
 block.erida-solar-energy-generator.name = Solar panel
 block.erida-tornado.name = Tornado
 block.erida-weak-processor.name = Weak processor
+block.erida-processor.name = Processor
+block.erida-memory-storage.name = Memory storage
+block.erida-mega-processor.name = Mega processor
+block.erida-display-large.name = Large display
 
 unit.erida-particle.name = Particle
 unit.erida-quantum.name = Quantum
